syntax = "proto3";

option csharp_namespace = "CommunicationServer";

package Work;

// The workload service definition.
service Workload {
  // Sends a Request
  rpc GetWorkload (WorkloadRequest) returns (WorkloadResponse);
}

//workload Request
message WorkloadRequest {
	enum BenchMarkType {
		DVDTrain = 0;
        DVDTest = 1;
        NDBenchTrain = 2;
        NDBenchTest = 3;
	}
	enum MetricType{
		CPU = 0;
        NetworkIn = 1;
        NetworkOut = 2;
        Memory = 3;
        FinalTarget = 4;
	}
	string rfw = 1;
	BenchMarkType benchMark = 2;
	MetricType metric = 3;
	int32 batchUnit = 4;
	int32 batchId = 5;
	int32 batchSize = 6;
}

//Workload Response
message WorkloadResponse{
	string rfw = 1;
	string LastBatchId = 2;
	repeated Batch batches = 3;
}

//batch
message Batch{
	int32 batchId = 1;
	repeated double values = 2;
}